--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# ignore vscode 
+.vscode
+
+
 # default experiment tracker data
 .tracker-data/
 
@@ -138,3 +142,4 @@ dmypy.json
 .pyre/
 .tracker_data
 *.pth
+.vscode/settings.json
